--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   </head>
   <body>
     <div class="canvas">
+      <div class="canvas__explantion">
+        <h1 class="canvas__title">Mastermind</h1>
+        <p class="canvas__rules">
+          Guess the pattern.
+          <br />Four characters.
+          <br />Numbers 1 through 6.
+        </p>
+      </div>
       <input id="guess" class="canvas__input" />
       <div id="notification" class="canvas__notification"></div>
       <div id="results" class="canvas__results"></div>
@@ -16,7 +24,6 @@
       Restart
     </button>
 
-    <script src="./mastermind.js">
-Ω    </script>
+    <script src="./mastermind.js"></script>
   </body>
 </html>
