adds an explanation of results and some styles

--- a/index.html
+++ b/index.html
@@ -15,9 +15,20 @@
           <br />Numbers 1 through 6.
         </p>
       </div>
+      
       <input id="guess" class="canvas__input" />
+
       <div id="notification" class="canvas__notification"></div>
+
       <div id="results" class="canvas__results"></div>
+
+      <div class="canvas__rules canvas__rules--small">
+        <strong>Result order != input order</strong>
+        <br />
+        x = Correct number and location
+        <br />
+        o = Correct number, wrong location
+      </div>
     </div>
 
     <button id="restart" class="restart-button" type="button" name="restart">
