adds personal info in a footer

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <br />Numbers 1 through 6.
         </p>
       </div>
-      
+
       <input id="guess" class="canvas__input" />
 
       <div id="notification" class="canvas__notification"></div>
@@ -29,11 +29,20 @@
         <br />
         o = Correct number, wrong location
       </div>
+
+      <button id="restart" class="canvas__restart-button" type="button" name="restart">
+        Restart
+      </button>
     </div>
 
-    <button id="restart" class="restart-button" type="button" name="restart">
-      Restart
-    </button>
+    <p class="footer">
+      Written on a plane by <a href="http://eimaj.net">@eimaj</a>
+      <br />
+      <a href="https://github.com/eimaj/matermind">repo</a> |
+      <a href="https://github.com/eimaj">github</a> |
+      <a href="https://www.linkedin.com/in/eimaj">linkedin</a> |
+      <a href="https://twitter.com/eimaj">twitter</a>
+    </p>
 
     <script src="./mastermind.js"></script>
   </body>
