--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <p class="footer">
       Written on a plane by <a href="http://eimaj.net">@eimaj</a>
       <br />
-      <a href="https://github.com/eimaj/matermind">repo</a> |
+      <a href="https://github.com/eimaj/mastermind">repo</a> |
       <a href="https://github.com/eimaj">github</a> |
       <a href="https://www.linkedin.com/in/eimaj">linkedin</a> |
       <a href="https://twitter.com/eimaj">twitter</a>
