--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Mastermind</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Mastermind.js</title>
     <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
