Adds type='number' to the input field for mobile.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </p>
       </div>
 
-      <input id="guess" class="canvas__input" />
+      <input id="guess" class="canvas__input" type="number" />
 
       <div id="notification" class="canvas__notification"></div>
 
