some rough high score action

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
       <input id="guess" class="canvas__input" type="number" />
 
+      <div id="highscore" class="canvas__highscore"></div>
+      
       <div id="notification" class="canvas__notification"></div>
 
       <div id="results" class="canvas__results"></div>
